--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="md:w-1/2 flex justify-center hover-scale">
                 <div class="bg-white/20 rounded-xl w-full h-80 md:h-96 flex items-center justify-center">
                     <!-- <i data-lucide="play" class="w-16 h-16 text-yellow-300"></i> -->
-                     <img src="./Ajarni_dashboard.png">
+                     <img src="./ajarni_dashboard.png">
                 </div>
             </div>
         </div>
@@ -209,7 +209,7 @@
                 <div class="md:w-1/2 mb-8 md:mb-0 animate-fade-in-up">
                     <div class="bg-white dark:bg-gray-700 p-4 rounded-xl shadow-lg w-full max-w-md mx-auto hover-scale">
                         <div class="bg-gray-200 dark:bg-gray-600 rounded-lg w-full h-64 flex items-center justify-center">
-                            <img src="./Ajarni_mobile_stacked.png">
+                            <img src="./ajarni_mobile_stacked.png">
                             <!-- <i data-lucide="smartphone" class="w-16 h-16 text-blue-600 dark:text-blue-300"></i> -->
                         </div>
                     </div>
