--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         </li>
                         <li class="flex items-start rtl:flex-row-reverse">
                             <i data-lucide="x" class="w-4 h-4 mt-1 mr-2 rtl:ml-2 rtl:mr-0 text-red-500 flex-shrink-0"></i>
-                            <span data-en="Inefficient Ejari processes" data-ar="إجراءات إيجاري غير فعالة">Inefficient Ejari processes</span>
+                            <span data-en="Pre-Arrival Housing Chaos" data-ar="فوضى السكن قبل الوصول">Pre-Arrival Housing Chaos</span>
                         </li>
                         <li class="flex items-start rtl:flex-row-reverse">
                             <i data-lucide="x" class="w-4 h-4 mt-1 mr-2 rtl:ml-2 rtl:mr-0 text-red-500 flex-shrink-0"></i>
