--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             }
         }
     </script>
+    <link rel="shortcut icon" href="./favicon.ico">
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
     <!-- Google Fonts - Manrope (English) + Tajawal (Arabic) -->
