update email contact

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                     <ul class="space-y-2">
                         <li class="flex items-start rtl:flex-row-reverse">
                             <i data-lucide="mail" class="w-4 h-4 mt-1 mr-2 rtl:ml-2 rtl:mr-0 text-blue-200 dark:text-blue-300"></i>
-                            <span class="text-blue-200 dark:text-blue-300">info@ajarni.ae</span>
+                            <span class="text-blue-200 dark:text-blue-300">info@ajarni.live</span>
                         </li>
                         <li class="flex items-start rtl:flex-row-reverse">
                             <i data-lucide="phone" class="w-4 h-4 mt-1 mr-2 rtl:ml-2 rtl:mr-0 text-blue-200 dark:text-blue-300"></i>
