switch ejari image to dxb land dept

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 </div>
                 <div class="bg-white dark:bg-gray-700 p-4 rounded-lg shadow-sm w-32 h-20 flex items-center justify-center hover-scale animate-fade-in-up" style="animation-delay: 0.4s;">
                     <!-- <span class="text-gray-400 dark:text-gray-300 font-medium">Ejari</span> -->
-                      <img src="./ejari.png">
+                      <img src="./land_department.svg">
                 </div>
             </div>
         </div>
