--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <p class="text-xl mb-8" data-en="AI + Blockchain-powered leasing, compliance, and tenant automation aligned with UAE Vision 2030." data-ar="منصة تأجير ذكية تعمل بالذكاء الاصطناعي والبلوك تشين، متوافقة مع رؤية الإمارات 2030">AI + Blockchain-powered leasing, secure, equitable, and paperless rentals aligned with UAE Vision 2030.</p>
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4 rtl:space-x-reverse">
                     <a href="#waitlist" class="px-8 py-3 bg-yellow-400 text-blue-900 font-bold rounded-lg hover:bg-yellow-300 transition text-center hover-scale" data-en="Join Pilot Program" data-ar="انضم إلى البرنامج التجريبي">Join Pilot Program</a>
-                    <a href="#demo" class="px-8 py-3 border-2 border-white text-white font-bold rounded-lg hover:bg-white hover:text-blue-900 transition text-center hover-scale" data-en="Watch Demo" data-ar="شاهد العرض">Watch Demo</a>
+                    <a href="https://youtu.be/AsxcKrvtMTw" class="px-8 py-3 border-2 border-white text-white font-bold rounded-lg hover:bg-white hover:text-blue-900 transition text-center hover-scale" data-en="Watch Demo" data-ar="شاهد العرض">Watch Demo</a>
                 </div>
             </div>
             <div class="md:w-1/2 flex justify-center hover-scale">
