update footer note to cloudzone

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 </div>
 </div>
 <div class="border-t border-blue-800 dark:border-gray-700 mt-8 pt-8 text-center text-blue-300 dark:text-blue-400">
-<p>© 2024 Ajarni Technologies LLC. All rights reserved.</p>
+<p>© 2024 CloudZone IT Consultants LLC. All rights reserved.</p>
 </div>
 </div>
 </footer>
